# SvaklaAI

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  install.sh  main.cpp  main.d  plan.txt  setup-permissions.sh  sys.txt
api/: CMakeLists.txt  Makefile  api_integration.cpp  api_integration.d  api_integration.h
chat/: CMakeLists.txt  Makefile  chat_storage.cpp  chat_storage.d  chat_storage.h
docs/: build.md  dev-optimization.md  final_summary.md  placeholder.md  plugin-dev.md  security.md  usage.md
ethics/: CMakeLists.txt  Makefile  ethics.cpp  ethics.d  ethics.h
include/: CMakeLists.txt  Makefile  openssl_init.h  placeholder.h
list/: CMakeLists.txt  Makefile  list.cpp  list.h
logic/: CMakeLists.txt  Makefile  logic.cpp  logic.d  logic.h
model/: CMakeLists.txt  Makefile  reinforcement_learning.cpp  reinforcement_learning.d  reinforcement_learning.h
nlp/: CMakeLists.txt  Makefile  nlp.cpp  nlp.d  nlp.h
plugins/: CMakeLists.txt  Makefile  plugin_manager.cpp  plugin_manager.d  plugin_manager.h
programming/: CMakeLists.txt  Makefile  programming.cpp  programming.d  programming.h
scraping/: CMakeLists.txt  Makefile  web_scraping.cpp  web_scraping.d  web_scraping.h
src/: advanced_low_level.cpp  ai_core.cpp  api_server.cpp  auth.cpp  expansion_modules.cpp  external_service_interface.cpp  final_summary.cpp  firewall_script.sh  http_server.cpp  installation_system.cpp  interactive_shell.cpp  local_memory_storage.cpp  monitoring_safety.cpp  plugin_system.cpp  privacy_security.cpp  web_interface.cpp  websocket_server.cpp
tests/: CMakeLists.txt  Makefile
web_interface/: CMakeLists.txt  Makefile  web_interface.cpp  web_interface.d  web_interface.h  web_template.h
